vpc-common-tson/src/main/java/net/vpc/common/tson/impl/parser/javacc/TsonStreamParserImpl.java
/* Generated By:JavaCC: Do not edit this line. TsonStreamParserImpl.java */
package net.vpc.common.tson.impl.parser.javacc;
import net.vpc.common.tson.impl.elements.InputStreamTsonBinaryStreamSource;
import net.vpc.common.tson.impl.elements.TsonBinaryStreamImpl;
import net.vpc.common.tson.impl.elements.TsonBooleanImpl;
import net.vpc.common.tson.impl.elements.TsonNullImpl;
import net.vpc.common.tson.impl.parser.*;
import net.vpc.common.tson.*;

public class TsonStreamParserImpl implements ITsonStreamParser, TsonStreamParserImplConstants {
    private TsonStreamParserImplConfig config;
    private TsonParserVisitor visitor;
    public void setConfig(TsonStreamParserImplConfig c){
        this.config=c;
        this.visitor=config.getVisitor();
    }

    private String prepareComments(String comments){
        if(!config.isRawComments()){
            return TsonParserUtils.escapeComments(comments);
        }
        return comments;
    }

  final public void parseDocument() throws ParseException {
    parseElement();
        visitor.visitDocumentEnd();
  }

  final public void parseElement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DATETIME:
    case DATE:
    case TIME:
    case REGEX:
    case LBRACE:
    case SHORT:
    case BYTE:
    case LONG:
    case INTEGER:
    case INTEGER_H:
    case INTEGER_O:
    case INTEGER_B:
    case LONG_H:
    case LONG_O:
    case LONG_B:
    case SHORT_H:
    case SHORT_O:
    case SHORT_B:
    case BYTE_H:
    case BYTE_O:
    case BYTE_B:
    case FLOAT:
    case DOUBLE:
    case STRING:
    case CHARACTER:
    case TRUE:
    case FALSE:
    case NULL:
    case LPAREN:
    case LBRACK:
    case AT:
    case CHARSTREAM_START:
    case NAN:
    case POS_INF:
    case NEG_INF:
    case POS_BOUND:
    case NEG_BOUND:
    case COMMENT:
    case NAME:
      elementLevel2();
      break;
    case 0:
      jj_consume_token(0);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void elementLevel2() throws ParseException {
visitor.visitInstructionStart();
boolean simple=true;
    elementLevel1();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
      jj_consume_token(COLON);
      elementLevel1();
                              simple=false;visitor.visitKeyValueEnd();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
        if(simple){
            visitor.visitSimpleEnd();
        }
  }

  final public void elementLevel1() throws ParseException {
    net.vpc.common.tson.impl.parser.javacc.Token comments=null;
    visitor.visitElementStart();
    Token typeName=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMENT:
      comments = jj_consume_token(COMMENT);
            if(!config.isSkipComments()) {
            visitor.visitComments(prepareComments(comments.image));
            }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AT:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      annotation();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NULL:
      jj_consume_token(NULL);
             visitor.visitPrimitiveEnd(TsonNullImpl.INSTANCE);
      break;
    case TRUE:
      jj_consume_token(TRUE);
              visitor.visitPrimitiveEnd(TsonBooleanImpl.TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
               visitor.visitPrimitiveEnd(TsonBooleanImpl.FALSE);
      break;
    case DATETIME:
      jj_consume_token(DATETIME);
                   visitor.visitPrimitiveEnd(TsonParserUtils.parseDateTimeElem(token.image));
      break;
    case DATE:
      jj_consume_token(DATE);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseDateElem(token.image));
      break;
    case TIME:
      jj_consume_token(TIME);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseTimeElem(token.image));
      break;
    case REGEX:
      jj_consume_token(REGEX);
                visitor.visitPrimitiveEnd(TsonParserUtils.parseRegexElem(token.image));
      break;
    case BYTE:
      jj_consume_token(BYTE);
             visitor.visitPrimitiveEnd(TsonParserUtils.parseByteElem(token.image));
      break;
    case SHORT:
      jj_consume_token(SHORT);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseShortElem(token.image));
      break;
    case LONG:
      jj_consume_token(LONG);
              visitor.visitPrimitiveEnd(TsonParserUtils.parseLongElem(token.image));
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
                visitor.visitPrimitiveEnd(TsonParserUtils.parseIntElem(token.image));
      break;
    case BYTE_B:
      jj_consume_token(BYTE_B);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseByteElemBin(token.image));
      break;
    case BYTE_O:
      jj_consume_token(BYTE_O);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseByteElemOctal(token.image));
      break;
    case BYTE_H:
      jj_consume_token(BYTE_H);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseByteElemHex(token.image));
      break;
    case SHORT_B:
      jj_consume_token(SHORT_B);
                visitor.visitPrimitiveEnd(TsonParserUtils.parseShortElemBin(token.image));
      break;
    case SHORT_O:
      jj_consume_token(SHORT_O);
                visitor.visitPrimitiveEnd(TsonParserUtils.parseShortElemOctal(token.image));
      break;
    case SHORT_H:
      jj_consume_token(SHORT_H);
                visitor.visitPrimitiveEnd(TsonParserUtils.parseShortElemHex(token.image));
      break;
    case INTEGER_B:
      jj_consume_token(INTEGER_B);
                  visitor.visitPrimitiveEnd(TsonParserUtils.parseIntElemBin(token.image));
      break;
    case INTEGER_O:
      jj_consume_token(INTEGER_O);
                  visitor.visitPrimitiveEnd(TsonParserUtils.parseIntElemOctal(token.image));
      break;
    case INTEGER_H:
      jj_consume_token(INTEGER_H);
                  visitor.visitPrimitiveEnd(TsonParserUtils.parseIntElemHex(token.image));
      break;
    case LONG_B:
      jj_consume_token(LONG_B);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseLongElemBin(token.image));
      break;
    case LONG_O:
      jj_consume_token(LONG_O);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseLongElemOctal(token.image));
      break;
    case LONG_H:
      jj_consume_token(LONG_H);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseLongElemHex(token.image));
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseFloatElem(token.image));
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
               visitor.visitPrimitiveEnd(TsonParserUtils.parseDoubleElem(token.image));
      break;
    case CHARACTER:
      jj_consume_token(CHARACTER);
                   visitor.visitPrimitiveEnd(TsonParserUtils.parseCharElem(token.image));
      break;
    case STRING:
      jj_consume_token(STRING);
                 visitor.visitPrimitiveEnd(TsonParserUtils.parseStringElem(token.image));
      break;
    case NAN:
      jj_consume_token(NAN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        typeName = jj_consume_token(NAME);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
                                                visitor.visitPrimitiveEnd(TsonParserUtils.parseNaNElem(token==null?null:token.image));
      break;
    case POS_INF:
      jj_consume_token(POS_INF);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        typeName = jj_consume_token(NAME);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
                                                    visitor.visitPrimitiveEnd(TsonParserUtils.parsePosInfElem(token==null?null:token.image));
      break;
    case NEG_INF:
      jj_consume_token(NEG_INF);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        typeName = jj_consume_token(NAME);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
                                                    visitor.visitPrimitiveEnd(TsonParserUtils.parseNegInfElem(token==null?null:token.image));
      break;
    case POS_BOUND:
      jj_consume_token(POS_BOUND);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        typeName = jj_consume_token(NAME);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
                                                      visitor.visitPrimitiveEnd(TsonParserUtils.parsePosBoundElem(token==null?null:token.image));
      break;
    case NEG_BOUND:
      jj_consume_token(NEG_BOUND);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        typeName = jj_consume_token(NAME);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
                                                      visitor.visitPrimitiveEnd(TsonParserUtils.parseNegBoundElem(token==null?null:token.image));
      break;
    case CHARSTREAM_START:
      bin();
      break;
    case LBRACE:
      object(false);
      break;
    case LBRACK:
      array(false);
      break;
    case NAME:
      named();
      break;
    case LPAREN:
      unnamed();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void annotation() throws ParseException {
  Token id=null;
    jj_consume_token(AT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      id = jj_consume_token(NAME);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
        visitor.visitAnnotationStart(id==null?null:id.image);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RPAREN:
      jj_consume_token(RPAREN);
      break;
    case DATETIME:
    case DATE:
    case TIME:
    case REGEX:
    case LBRACE:
    case SHORT:
    case BYTE:
    case LONG:
    case INTEGER:
    case INTEGER_H:
    case INTEGER_O:
    case INTEGER_B:
    case LONG_H:
    case LONG_O:
    case LONG_B:
    case SHORT_H:
    case SHORT_O:
    case SHORT_B:
    case BYTE_H:
    case BYTE_O:
    case BYTE_B:
    case FLOAT:
    case DOUBLE:
    case STRING:
    case CHARACTER:
    case TRUE:
    case FALSE:
    case NULL:
    case LPAREN:
    case LBRACK:
    case AT:
    case CHARSTREAM_START:
    case NAN:
    case POS_INF:
    case NEG_INF:
    case POS_BOUND:
    case NEG_BOUND:
    case COMMENT:
    case NAME:
      annotationParam();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        annotationParam();
      }
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         visitor.visitAnnotationEnd();
  }

  final public void bin() throws ParseException {
    InputStreamTsonBinaryStreamSource bin=new InputStreamTsonBinaryStreamSource();
    jj_consume_token(CHARSTREAM_START);
    bin.pushBase64(token.image);
    jj_consume_token(CHARSTREAM_END);
    visitor.visitPrimitiveEnd(new TsonBinaryStreamImpl(bin));
  }

  final public void named() throws ParseException {
  Token id;
    boolean hasPars=false;
    boolean hasArr=false;
    boolean hasObj=false;
    id = jj_consume_token(NAME);
        visitor.visitNamedStart(id.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      unnamed0();
                  hasPars=true;
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
    case LBRACK:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACK:
        array(true);
                      hasArr=true;
        break;
      case LBRACE:
        object(true);
                       hasObj=true;
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
        if(!hasArr && !hasObj){
            if(!hasPars){
                visitor.visitPrimitiveEnd(Tson.name(id.image));
            }else {
                visitor.visitFunctionEnd();
            }
        }
  }

  final public void param() throws ParseException {
    visitor.visitParamElementStart();
    elementLevel2();
        visitor.visitParamElementEnd();
  }

  final public void unnamed() throws ParseException {
    boolean hasArr=false;
    boolean hasObj=false;
    unnamed0();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
    case LBRACK:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACK:
        array(true);
                      hasArr=true;
        break;
      case LBRACE:
        object(true);
                       hasObj=true;
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
        if(!hasArr && !hasObj){
                visitor.visitUpletEnd();
        }
  }

  final public void unnamed0() throws ParseException {
    jj_consume_token(LPAREN);
    visitor.visitParamsStart();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RPAREN:
      jj_consume_token(RPAREN);
      break;
    case DATETIME:
    case DATE:
    case TIME:
    case REGEX:
    case LBRACE:
    case SHORT:
    case BYTE:
    case LONG:
    case INTEGER:
    case INTEGER_H:
    case INTEGER_O:
    case INTEGER_B:
    case LONG_H:
    case LONG_O:
    case LONG_B:
    case SHORT_H:
    case SHORT_O:
    case SHORT_B:
    case BYTE_H:
    case BYTE_O:
    case BYTE_B:
    case FLOAT:
    case DOUBLE:
    case STRING:
    case CHARACTER:
    case TRUE:
    case FALSE:
    case NULL:
    case LPAREN:
    case LBRACK:
    case AT:
    case CHARSTREAM_START:
    case NAN:
    case POS_INF:
    case NEG_INF:
    case POS_BOUND:
    case NEG_BOUND:
    case COMMENT:
    case NAME:
      param();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        param();
      }
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     visitor.visitParamsEnd();
  }

  final public void objectElement() throws ParseException {
    visitor.visitObjectElementStart();
    elementLevel2();
        visitor.visitObjectElementEnd();
  }

  final public void arrayElement() throws ParseException {
    visitor.visitArrayElementStart();
    elementLevel2();
        visitor.visitArrayElementEnd();
  }

  final public void object(boolean named) throws ParseException {
    jj_consume_token(LBRACE);
        if(named){
            visitor.visitNamedObjectStart();
        }else{
            visitor.visitObjectStart();
        }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RBRACE:
      jj_consume_token(RBRACE);
      break;
    case DATETIME:
    case DATE:
    case TIME:
    case REGEX:
    case LBRACE:
    case SHORT:
    case BYTE:
    case LONG:
    case INTEGER:
    case INTEGER_H:
    case INTEGER_O:
    case INTEGER_B:
    case LONG_H:
    case LONG_O:
    case LONG_B:
    case SHORT_H:
    case SHORT_O:
    case SHORT_B:
    case BYTE_H:
    case BYTE_O:
    case BYTE_B:
    case FLOAT:
    case DOUBLE:
    case STRING:
    case CHARACTER:
    case TRUE:
    case FALSE:
    case NULL:
    case LPAREN:
    case LBRACK:
    case AT:
    case CHARSTREAM_START:
    case NAN:
    case POS_INF:
    case NEG_INF:
    case POS_BOUND:
    case NEG_BOUND:
    case COMMENT:
    case NAME:
      objectElement();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        objectElement();
      }
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
            if(named){
                visitor.visitNamedObjectEnd();
            }else{
                visitor.visitObjectEnd();
            }
  }

  final public void array(boolean named) throws ParseException {
    jj_consume_token(LBRACK);
        if(named){
           visitor.visitNamedArrayStart();
        }else{
            visitor.visitArrayStart();
        }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RBRACK:
      jj_consume_token(RBRACK);
      break;
    case DATETIME:
    case DATE:
    case TIME:
    case REGEX:
    case LBRACE:
    case SHORT:
    case BYTE:
    case LONG:
    case INTEGER:
    case INTEGER_H:
    case INTEGER_O:
    case INTEGER_B:
    case LONG_H:
    case LONG_O:
    case LONG_B:
    case SHORT_H:
    case SHORT_O:
    case SHORT_B:
    case BYTE_H:
    case BYTE_O:
    case BYTE_B:
    case FLOAT:
    case DOUBLE:
    case STRING:
    case CHARACTER:
    case TRUE:
    case FALSE:
    case NULL:
    case LPAREN:
    case LBRACK:
    case AT:
    case CHARSTREAM_START:
    case NAN:
    case POS_INF:
    case NEG_INF:
    case POS_BOUND:
    case NEG_BOUND:
    case COMMENT:
    case NAME:
      arrayElement();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        arrayElement();
      }
      jj_consume_token(RBRACK);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         if(named){
              visitor.visitNamedArrayEnd();
         }else{
            visitor.visitArrayEnd();
         }
  }

  final public void annotationParam() throws ParseException {
  visitor.visitAnnotationParamStart();
    elementLevel2();
    visitor.visitAnnotationParamEnd();
  }
